--- a/index.html
+++ b/index.html
@@ -22,12 +22,9 @@
     <meta itemprop=wordCount content="841">
 
     <link href="/workshop/src/images/favicon.ico" rel="icon" type="image/x-icon" sizes="any">
+    <link href="/workshop/src/css/fontawesome-all.min.css" rel="stylesheet" media="print" onload='this.media="all",this.onload=null'>
 
-    <!-- <link href=/observability-workshop/v5.83/images/favicon.ico?1740139255 rel=icon type=image/x-icon sizes=any>
-  <link href=/observability-workshop/v5.83/css/fontawesome-all.min.css?1740139255 rel=stylesheet media=print
-    onload='this.media="all",this.onload=null'><noscript>
-    <link href=/observability-workshop/v5.83/css/fontawesome-all.min.css?1740139255 rel=stylesheet>
-  </noscript>
+    <!-- 
   <link href=/observability-workshop/v5.83/css/auto-complete.css?1740139255 rel=stylesheet media=print
     onload='this.media="all",this.onload=null'><noscript>
     <link href=/observability-workshop/v5.83/css/auto-complete.css?1740139255 rel=stylesheet>
