--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
       }
     </style>
   </head>
-  <body>
-    
+  <body class="mobile-support html disableInlineCopyToClipboard" data-url="/workshop/src/index.html">
+    <div id="R-body" class="default-animation">
+      <div id="R-body-overlay"></div>
+        <nav id="R-topbar">
+          <div class="topbar-wrapper">
+            <div class="topbar-sidebar-divider"></div>
+          </div>
+        </nav>
+    </div>
   </body>
 </html>
