--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 stroke="none" fill="#fff" fill-rule="nonzero" />
             </g>
           </svg></a></div>
-      <div><img src="images/pwny-kr.webp"></div>
+      <div><img src="/workshop/src/images/pwny-kr.webp"></div>
       <script>window.index_js_url = "/o11y-workshop-kr/v5.83/searchindex.en.js?1740139255"</script>
       <search>
         <form action=/o11y-workshop-kr/v5.83/en/search/index.html method=get>
@@ -242,15 +242,7 @@
           </div>
         </form>
       </search>
-      <script>var contentLangs = ["ja", "en"]</script>
-      <script src=/o11y-workshop-kr/v5.83/js/auto-complete.js?1740139255 defer></script>
-      <script src=/o11y-workshop-kr/v5.83/js/lunr/lunr.min.js?1740139255 defer></script>
-      <script src=/o11y-workshop-kr/v5.83/js/lunr/lunr.stemmer.support.min.js?1740139255 defer></script>
-      <script src=/o11y-workshop-kr/v5.83/js/lunr/lunr.multi.min.js?1740139255 defer></script>
-      <script src=/o11y-workshop-kr/v5.83/js/lunr/tinyseg.js?1740139255 defer></script>
-      <script src=/o11y-workshop-kr/v5.83/js/lunr/lunr.ja.min.js?1740139255 defer></script>
-      <script src=/o11y-workshop-kr/v5.83/js/lunr/lunr.en.min.js?1740139255 defer></script>
-      <script src=/o11y-workshop-kr/v5.83/js/search.js?1740139255 defer></script>
+      
     </div>
     <div id=R-homelinks class="default-animation homelinks">
       <ul>
@@ -2604,7 +2596,6 @@
                 </div>
                 <div class=clear></div>
               </div>
-              <script>window.relearn.markVariant()</script>
             </li>
             <li class="footerVisitedLinks showVisitedLinks">
               <div class="padding menu-control"><i class="fa-fw fas fa-history"></i>
