--- a/index.html
+++ b/index.html
@@ -112,12 +112,26 @@
                 monitoring, visualizing and analyzing metrics, traces and logs.</p>
             </div>
           </details>
-          <p><a href=#R-image-9c6b33246d509793bd5cbfa2dafd2029 class=lightbox-link><img alt=gif
-                class="noborder lazy lightbox noshadow figure-image" loading=lazy
-                src=/o11y-workshop-kr/v5.83/en/images/observability-hero-dashboard.gif style=height:auto;width:auto></a>
-            <a href=javascript:history.back(); class=lightbox-back id=R-image-9c6b33246d509793bd5cbfa2dafd2029><img
-                alt=gif class="noborder lazy lightbox noshadow lightbox-image" loading=lazy
-                src=/o11y-workshop-kr/v5.83/en/images/observability-hero-dashboard.gif></a>
+          <p>
+            <a href=#R-image-9c6b33246d509793bd5cbfa2dafd2029 class="lightbox-link">
+              <img 
+                alt="gif"
+                class="noborder lazy lightbox noshadow figure-image" 
+                loading="lazy"
+                src="/workshop/src/images/observability-hero-dashboard.gif" 
+                style="height:auto;width:auto">
+            </a>
+            <a 
+              href="javascript:history.back();"
+              class="lightbox-back" 
+              id="R-image-9c6b33246d509793bd5cbfa2dafd2029"
+            >
+              <img
+                alt="gif" 
+                class="noborder lazy lightbox noshadow lightbox-image" 
+                loading="lazy"
+                src="/workshop/src/images/observability-hero-dashboard.gif">
+            </a>
           </p>
           <ul class="children children-li children-sort-">
             <li><a href=/o11y-workshop-kr/v5.83/en/s4r/index.html>Splunk4Rookies - Observability Cloud</a>
@@ -2489,18 +2503,7 @@
           </li>
         </ul>
       </div>
-      <div id=R-shortcutmenu-shortcuts class=R-sidebarmenu>
-        <div class="nav-title padding">More</div>
-        <ul class="space collapsible-menu">
-          <li data-nav-id=https://github.com/splunk/o11y-workshop-kr><a class=padding
-              href=https://github.com/splunk/o11y-workshop-kr target=_blank><i class='fab fa-fw fa-github'></i> GitHub
-              Repository<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id=https://opentelemetry.io><a class=padding href=https://opentelemetry.io target=_blank><i
-                class="fab fa-fw fa-wpexplorer"></i> OpenTelemetry<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id=https://twitter.com/splunk><a class=padding href=https://twitter.com/splunk target=_blank><i
-                class="fab fa-fw fa-twitter"></i> Twitter<i class="fa-fw fas fa-check read-icon"></i></a></li>
-        </ul>
-      </div>
+      
       <div
         class="padding footermargin footerLangSwitch footerVariantSwitch footerVisitedLinks footerFooter showLangSwitch showVariantSwitch showVisitedLinks showFooter">
       </div>
@@ -2547,7 +2550,7 @@
             </li>
           </ul>
         </div>
-        <div id=R-footer class="footerFooter showFooter">
+        <div id="R-footer" class="footerFooter showFooter">
           <style>
             #footer {
               font-size: 13px;
@@ -2564,8 +2567,11 @@
               margin: 0
             }
           </style>
-          <p><a href=https://splunk.com title=Splunk>&copy; 2005 - 2025 Splunk Inc. All rights reserved.</a></p><br><img
-            src="https://img.shields.io/github/v/release/splunk/o11y-workshop-kr?label=Workshop Version&color=e20082">
+          <p>
+            <a href=https://splunk.com title=Splunk>&copy; 2005 - 2025 Splunk Inc. All rights reserved.</a>
+          </p>
+          <br>
+          <img src="https://img.shields.io/github/v/release/splunk/o11y-workshop-kr?label=Workshop Version&color=e20082">
         </div>
       </div>
     </div>
