--- a/index.html
+++ b/index.html
@@ -55,71 +55,6 @@
   <div id="R-body" class="default-animation">
     <div id="R-body-overlay"></div>
     <nav id="R-topbar">
-      <div class="topbar-wrapper">
-        <div class="topbar-sidebar-divider"></div>
-        <div class="topbar-area topbar-area-start" data-area=start>
-          <div 
-            class="topbar-button topbar-button-sidebar" 
-            data-content-empty=disable 
-            data-width-s=show
-            data-width-m=hide 
-            data-width-l=hide
-          >
-            <button 
-              class="topbar-control" 
-              onclick="toggleNav()" 
-              type="button"
-              title="Menu (CTRL+ALT+n)"
-            >
-              <i class="fa-fw fas fa-bars"></i>
-            </button>
-          </div>
-          <div 
-            class="topbar-button topbar-button-toc" 
-            data-content-empty=hide 
-            data-width-s=show 
-            data-width-m=show
-            data-width-l=show
-          >
-            <button 
-              class="topbar-control" 
-              onclick="toggleTopbarFlyout(this)" 
-              type="button"
-              title="Table of Contents (CTRL+ALT+t)"
-            >
-              <i class="fa-fw fas fa-list-alt"></i>
-            </button>
-            <div class="topbar-content">
-              <div class="topbar-content-wrapper"></div>
-            </div>
-          </div>
-        </div>
-        <ol class="topbar-breadcrumbs breadcrumbs highlightable" itemscope itemtype=http://schema.org/BreadcrumbList>
-          <li itemscope itemtype=https://schema.org/ListItem itemprop=itemListElement><span itemprop=name>Splunk
-              Observability Workshops</span>
-            <meta itemprop=position content="1">
-          </li>
-        </ol>
-        <div class="topbar-area topbar-area-end" data-area=end>
-          <div class="topbar-button topbar-button-print" data-content-empty=disable data-width-s=area-more
-            data-width-m=show data-width-l=show><a class=topbar-control href=/o11y-workshop-kr/v5.83/en/index.print.html
-              title="Print whole chapter (CTRL+ALT+p)"><i class="fa-fw fas fa-print"></i></a></div>
-          <div class="topbar-button topbar-button-prev" data-content-empty=disable data-width-s=show data-width-m=show
-            data-width-l=show><span class=topbar-control><i class="fa-fw fas fa-chevron-left"></i></span></div>
-          <div class="topbar-button topbar-button-next" data-content-empty=disable data-width-s=show data-width-m=show
-            data-width-l=show><a class=topbar-control href=/o11y-workshop-kr/v5.83/en/s4r/index.html
-              title="Splunk4Rookies - Observability Cloud (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a></div>
-          <div class="topbar-button topbar-button-more" data-content-empty=hide data-width-s=show data-width-m=show
-            data-width-l=show><button class=topbar-control onclick=toggleTopbarFlyout(this) type=button title=More><i
-                class="fa-fw fas fa-ellipsis-v"></i></button>
-            <div class=topbar-content>
-              <div class=topbar-content-wrapper>
-                <div class="topbar-area topbar-area-more" data-area=more></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </nav>
     <div id="R-main-overlay"></div>
     <main id="R-body-inner" class="highlightable page" tabindex=-1>
@@ -359,12 +294,15 @@
 </body>
 <script>
   document.addEventListener('DOMContentLoaded', () => {
+    fetch('/workshop.src/html/topbar.html')
+      .then(res => res.text())
+      .then(html => document.querySelector('#R-topbar').innerHTML = html)
+      .catch(error => console.error('Failed to fetch page: ', error));
+      
     fetch('/workshop/src/html/sidebar.html')
       .then(res => res.text())
       .then(html => document.querySelector('#R-sidebar').innerHTML = html)
-      .catch(error => {
-        console.error('Failed to fetch page: ', error);
-      });
+      .catch(error => console.error('Failed to fetch page: ', error));
   });
 </script>
 </html>
