--- a/index.html
+++ b/index.html
@@ -47,15 +47,12 @@
   <script src="/workshop/src/js/perfect-scrollbar.min.js" defer></script>
   <script src="/workshop/src/js/theme.js" defer></script>
   <script src="/workshop/src/js/clipboard.min.js" defer></script>
-  <script src="/workshop/src/js/theme.js" defer></script>
-
 </head>
 
 <body class="mobile-support html disableInlineCopyToClipboard" data-url=/o11y-workshop-kr/v5.83/en/index.html>
   <div id="R-body" class="default-animation">
     <div id="R-body-overlay"></div>
-    <nav id="R-topbar">
-    </nav>
+    <nav id="R-topbar"></nav>
     <div id="R-main-overlay"></div>
     <main id="R-body-inner" class="highlightable page" tabindex=-1>
       <div class="flex-block-wrapper">
@@ -289,17 +286,16 @@
     </main>
   </div>
   <aside id="R-sidebar" class="default-animation showVisitedLinks">
-    
   </aside>
 </body>
 <script>
   document.addEventListener('DOMContentLoaded', () => {
-    fetch('/workshop.src/html/topbar.html')
+    fetch('/workshop/src/layout/topbar.html')
       .then(res => res.text())
       .then(html => document.querySelector('#R-topbar').innerHTML = html)
       .catch(error => console.error('Failed to fetch page: ', error));
-      
-    fetch('/workshop/src/html/sidebar.html')
+
+    fetch('/workshop/src/layout/sidebar.html')
       .then(res => res.text())
       .then(html => document.querySelector('#R-sidebar').innerHTML = html)
       .catch(error => console.error('Failed to fetch page: ', error));
