--- a/src/html/ITSI4Rookies/index.html
+++ b/src/html/ITSI4Rookies/index.html
@@ -50,6 +50,13 @@
     crossorigin=anonymous></script>
   <script>SplunkRum.init({ realm: "us1", rumAccessToken: "dp3FKraOS_wVhe-l7eCOsA", applicationName: "observability-workshop", deploymentEnvironment: "splunk.github.io", version: "1.0" }), SplunkSessionRecorder.init({ app: "observability-workshop", realm: "us1", rumAccessToken: "dp3FKraOS_wVhe-l7eCOsA" })</script>
   </script> -->
+
+  <link href="/workshop/src/images/favicon.ico" rel="icon" type="image/x-icon" sizes="any">
+  <link href="/workshop/src/css/fontawesome-all.min.css" rel="stylesheet" media="print" onload='this.media="all",this.onload=null'>
+  <link href="/workshop/src/css/perfect-scrollbar.min.css" rel="stylesheet">
+  <link href="/workshop/src/css/theme.min.css" rel="stylesheet">
+  <link href="/workshop/src/css/format-html.min.css" rel="stylesheet" id="R-format-style">
+  
   <style>
     :root {
       --MAIN-WIDTH-MAX: 130rem;
