--- a/src/ITSI4Rookies/index.html
+++ b/src/ITSI4Rookies/index.html
@@ -159,7 +159,7 @@
         document.querySelector('#R-topbar').innerHTML = html;
         document.querySelector('#breadcrumbs').innerHTML = `
           <li itemscope="" itemtype="https://schema.org/ListItem" itemprop="itemListElement">
-            <a itemprop="item" href="/observability-workshop/v5.83/en/index.html">
+            <a itemprop="item" href="/workshop/src/index.html">
               <span itemprop="name">Splunk Observability Workshops</span>
             </a>
             <meta itemprop="position" content="1">&nbsp;&gt;&nbsp;
