--- a/src/ninja-workshop/index.html
+++ b/src/ninja-workshop/index.html
@@ -84,7 +84,7 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      _com.loadSideBar();
+      _com.setPage();
     });
   </script>
   
