--- a/src/ITSI4Rookies/index.html
+++ b/src/ITSI4Rookies/index.html
@@ -12,6 +12,9 @@
     }
   </style>
   <script src="/workshop/src/js/includes.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => _com.setPage());
+  </script>
 </head>
 
 <body class="mobile-support html disableInlineCopyToClipboard">
