--- a/src/ITSI4Rookies/index.html
+++ b/src/ITSI4Rookies/index.html
@@ -13,7 +13,7 @@
   </style>
   <script src="/workshop/src/js/includes.js"></script>
   <script>
-    document.addEventListener('DOMContentLoaded', () => _com.setPage());
+    document.addEventListener('DOMContentLoaded', () => _com.setPage('1'));
   </script>
 </head>
 
