add session visited

--- a/src/ITSI4Rookies/index.html
+++ b/src/ITSI4Rookies/index.html
@@ -17,7 +17,7 @@
   </script>
 </head>
 
-<body class="mobile-support html disableInlineCopyToClipboard">
+<body class="mobile-support html disableInlineCopyToClipboard" data-url="/workshop/src/ITSI4Rookies/index.html">
   <div id="R-body" class="default-animation">
     <div id="R-body-overlay"></div>
     <nav id="R-topbar"></nav>
