--- a/src/ninja-workshop/index.html
+++ b/src/ninja-workshop/index.html
@@ -14,8 +14,7 @@
   <script src="/workshop/src/js/includes.js"></script>
 </head>
 
-<body class="mobile-support html disableInlineCopyToClipboard"
-  data-url=/observability-workshop/v5.83/en/ninja-workshops/1-automatic-discovery/1-petclinic-monolith/2-building-petclinic/index.html>
+<body class="mobile-support html disableInlineCopyToClipboard" data-url="/workshop/src/ninja-workshop/index.html">
   <div id="R-body" class="default-animation">
     <div id="R-body-overlay"></div>
     <nav id="R-topbar"></nav>
