--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </script>
 </head>
 
-<body class="mobile-support html disableInlineCopyToClipboard" data-url=/o11y-workshop-kr/v5.83/en/index.html>
+<body class="mobile-support html disableInlineCopyToClipboard" data-url="/workshop/src/index.html">
   <div id="R-body" class="default-animation">
     <div id="R-body-overlay"></div>
     <nav id="R-topbar"></nav>
