--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       --MENU-WIDTH-L: 23rem
     }
   </style>
-  <script src="/workshop/src/js/includes.js"></script>
+  <script src="/o11y-workshop-kr/src/js/includes.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => _com.setPage('0'));
   </script>
 </head>
 
-<body class="mobile-support html disableInlineCopyToClipboard" data-url="/workshop/src/index.html">
+<body class="mobile-support html disableInlineCopyToClipboard" data-url="/o11y-workshop-kr/src/index.html">
   <div id="R-body" class="default-animation">
     <div id="R-body-overlay"></div>
     <nav id="R-topbar"></nav>
@@ -45,7 +45,7 @@
                 alt="gif"
                 class="noborder lazy lightbox noshadow figure-image" 
                 loading="lazy"
-                src="/workshop/src/images/observability-hero-dashboard.gif" 
+                src="/o11y-workshop-kr/src/images/observability-hero-dashboard.gif" 
                 style="height:auto;width:auto">
             </a>
             <a 
@@ -57,7 +57,7 @@
                 alt="gif" 
                 class="noborder lazy lightbox noshadow lightbox-image" 
                 loading="lazy"
-                src="/workshop/src/images/observability-hero-dashboard.gif">
+                src="/o11y-workshop-kr/src/images/observability-hero-dashboard.gif">
             </a>
           </p>
           <ul class="children children-li children-sort-">
