--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       --MENU-WIDTH-L: 23rem
     }
   </style>
-  <script src="/src/js/includes.js"></script>
+  <script src="src/js/includes.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => _com.setPage('0'));
   </script>
