--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       --MENU-WIDTH-L: 23rem
     }
   </style>
-  <script src="src/js/includes.js"></script>
+  <script src="/o11y-workshop-kr/src/js/includes.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => _com.setPage('0'));
   </script>
@@ -45,7 +45,7 @@
                 alt="gif"
                 class="noborder lazy lightbox noshadow figure-image" 
                 loading="lazy"
-                src="src/images/observability-hero-dashboard.gif" 
+                src="/o11y-workshop-kr/src/images/observability-hero-dashboard.gif" 
                 style="height:auto;width:auto">
             </a>
             <a 
@@ -57,7 +57,7 @@
                 alt="gif" 
                 class="noborder lazy lightbox noshadow lightbox-image" 
                 loading="lazy"
-                src="src/images/observability-hero-dashboard.gif">
+                src="/o11y-workshop-kr/src/images/observability-hero-dashboard.gif">
             </a>
           </p>
           <ul class="children children-li children-sort-">
