--- a/src/ninja-workshop/index.html
+++ b/src/ninja-workshop/index.html
@@ -11,7 +11,7 @@
       --MENU-WIDTH-L: 23rem
     }
   </style>
-  <script src="/workshop/src/js/includes.js"></script>
+  <script src="/o11y-workshop-kr/src/js/includes.js"></script>
 </head>
 
 <body class="mobile-support html disableInlineCopyToClipboard" data-url="/workshop/src/ninja-workshop/index.html">
@@ -83,7 +83,7 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      _com.setPage();
+      _com.setPage('2');
     });
   </script>
   
