--- a/src/ITSI4Rookies/1-service-insights/index.html
+++ b/src/ITSI4Rookies/1-service-insights/index.html
@@ -12,6 +12,15 @@
     }
   </style>
   <script src="/o11y-workshop-kr/src/js/includes.js"></script>
+  <!-- md-block -->
+  <script type="module" src="https://md-block.verou.me/md-block.js"></script>
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.2.0/github-markdown-light.css"
+    integrity="sha512-n5zPz6LZB0QV1eraRj4OOxRbsV7a12eAGfFcrJ4bBFxxAwwYDp542z5M0w24tKPEhKk2QzjjIpR5hpOjJtGGoA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- github-markdown-light 테마 -->
+  <!-- prism code theme -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/hi098123/prism-for-tistory/prism.css">
 </head>
 
 <body class="mobile-support html disableInlineCopyToClipboard" data-url="/workshop/src/ninja-workshop/index.html">
@@ -20,6 +29,12 @@
     <nav id="R-topbar"></nav>
     <div id="R-main-overlay"></div>
     <main id="R-body-inner" class="highlightable ninja-workshops" tabindex=-1>
+      <div class="markdown-body">
+        <md-block src="./README.md">
+          <!-- README.md 로드 실패시 보이는 문구 -->
+          `README.md` was *not* found
+        </md-block>
+      </div>
       <div class="flex-block-wrapper">
         <article class="default">
           <header class="headline"></header>
