--- a/src/ITSI4Rookies/1-service-insights/index.html
+++ b/src/ITSI4Rookies/1-service-insights/index.html
@@ -20,7 +20,12 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- github-markdown-light 테마 -->
   <!-- prism code theme -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/hi098123/prism-for-tistory/prism.css">
+  <script src="
+  https://cdn.jsdelivr.net/npm/prismjs@1.30.0/prism.min.js
+  "></script>
+  <link href="
+  https://cdn.jsdelivr.net/npm/prismjs@1.30.0/themes/prism.min.css
+  " rel="stylesheet">
 </head>
 
 <body class="mobile-support html disableInlineCopyToClipboard" data-url="/workshop/src/ninja-workshop/index.html">
@@ -33,59 +38,11 @@
         <article class="default">
           <header class="headline"></header>
           <div class="markdown-body">
-            <md-block src="./README.md">
+            <md-block src="./1-service-insights.md">
               <!-- README.md 로드 실패시 보이는 문구 -->
               `README.md` was *not* found
             </md-block>
           </div>
-          <h1 id="building-the-spring-petclinic-application">Building the Spring PetClinic Application</h1>
-          <p>The first thing we need to set up APM is&mldr; well, an application. For this exercise, we will use the
-            Spring PetClinic application. This is a very popular sample Java application built with the Spring framework
-            (Springboot).</p>
-          <p>First, clone the PetClinic GitHub repository, and then we will compile, build, package and test the
-            application:</p>
-          <div class="highlight wrap-code">
-            <pre tabindex=0
-              class=chroma><code class=language-bash data-lang=bash><span class=line><span class=cl>git clone https://github.com/spring-projects/spring-petclinic</span></span></code></pre>
-          </div>
-          <p>Change into the <code>spring-petclinic</code> directory:</p>
-          <div class="highlight wrap-code">
-            <pre tabindex=0
-              class=chroma><code class=language-bash data-lang=bash><span class=line><span class=cl><span class=nb>cd</span> spring-petclinic</span></span></code></pre>
-          </div>
-          <p>Using Docker, start a MySQL database for PetClinic to use:</p>
-          <div class="highlight wrap-code">
-            <pre tabindex=0
-              class=chroma><code class=language-bash data-lang=bash><span class=line><span class=cl>docker run -d -e <span class=nv>MYSQL_USER</span><span class=o>=</span>petclinic -e <span class=nv>MYSQL_PASSWORD</span><span class=o>=</span>petclinic -e <span class=nv>MYSQL_ROOT_PASSWORD</span><span class=o>=</span>root -e <span class=nv>MYSQL_DATABASE</span><span class=o>=</span>petclinic -p 3306:3306 docker.io/biarms/mysql:5.7</span></span></code></pre>
-          </div>
-          <p>Next, we will start another container running Locust that will generate some simple traffic to the
-            PetClinic application. Locust is a simple load-testing tool that can be used to generate traffic to a web
-            application.</p>
-          <div class="highlight wrap-code">
-            <pre tabindex=0
-              class=chroma><code class=language-bash data-lang=bash><span class=line><span class=cl>docker run --network<span class=o>=</span><span class=s2>&#34;host&#34;</span> -d -p 8090:8090 -v ~/workshop/petclinic:/mnt/locust docker.io/locustio/locust -f /mnt/locust/locustfile.py --headless -u <span class=m>1</span> -r <span class=m>1</span> -H http://127.0.0.1:8083</span></span></code></pre>
-          </div>
-          <p>Next, compile, build and package PetClinic using <code>maven</code>:</p>
-          <div class="highlight wrap-code">
-            <pre tabindex=0
-              class=chroma><code class=language-bash data-lang=bash><span class=line><span class=cl>./mvnw package -Dmaven.test.skip<span class=o>=</span>true</span></span></code></pre>
-          </div>
-          <details open class="box cstyle notices info">
-            <summary class=box-label><i class="fa-fw fas fa-info-circle"></i>
-              Info</summary>
-            <div class=box-content>
-              <p>This will take a few minutes the first time you run and will download a lot of dependencies before it
-                compiles the application. Future builds will be a lot quicker.</p>
-            </div>
-          </details>
-          <p>Once the build completes, you need to obtain the public IP address of the instance you are running on. You
-            can do this by running the following command:</p>
-          <div class="highlight wrap-code">
-            <pre tabindex=0
-              class=chroma><code class=language-bash data-lang=bash><span class=line><span class=cl>curl http://ifconfig.me</span></span></code></pre>
-          </div>
-          <p>You will see an IP address returned, make a note of this as we will need it to validate that the
-            application is running.</p>
           <footer class=footline><span class="badge cstyle note badge-with-title"><span class=badge-title
                 class=text-muted>Last Modified
               </span><span class=badge-content>Sep 19, 2024</span></span></footer>
