--- a/src/ITSI4Rookies/1-service-insights/index.html
+++ b/src/ITSI4Rookies/1-service-insights/index.html
@@ -20,12 +20,11 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- github-markdown-light 테마 -->
   <!-- prism code theme -->
-  <script src="
-  https://cdn.jsdelivr.net/npm/prismjs@1.30.0/prism.min.js
-  "></script>
-  <link href="
-  https://cdn.jsdelivr.net/npm/prismjs@1.30.0/themes/prism.min.css
-  " rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-bash.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-javascript.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-python.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-json.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/themes/prism-twilight.min.css">
 </head>
 
 <body class="mobile-support html disableInlineCopyToClipboard" data-url="/workshop/src/ninja-workshop/index.html">
