--- a/src/ITSI4Rookies/1-service-insights/index.html
+++ b/src/ITSI4Rookies/1-service-insights/index.html
@@ -24,7 +24,8 @@
   <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-javascript.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-python.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-json.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/themes/prism-twilight.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/themes/prism-tomorrow.min.css">
+
 </head>
 
 <body class="mobile-support html disableInlineCopyToClipboard" data-url="/workshop/src/ninja-workshop/index.html">
@@ -42,6 +43,7 @@
               `README.md` was *not* found
             </md-block>
           </div>
+
           <footer class=footline><span class="badge cstyle note badge-with-title"><span class=badge-title
                 class=text-muted>Last Modified
               </span><span class=badge-content>Sep 19, 2024</span></span></footer>
