--- a/src/ITSI4Rookies/index.html
+++ b/src/ITSI4Rookies/index.html
@@ -68,25 +68,12 @@
           <p>ITSI를 이해하려면 AIOps 라는 업계 general term 부터 이해해야합니다</p>
           <p>
             <a href=#R-image-bbb78003e36cd7db6c726bd5aca1ae05 class="lightbox-link">
-              <img 
-                alt="Full Stack"
-                class="noborder lazy lightbox noshadow figure-image" 
-                loading="lazy" 
-                src="/workshop/src/images/AIOps.jpg"
-                style="height:auto;width:auto"
-              >
+              <img alt="Full Stack" class="noborder lazy lightbox noshadow figure-image" loading="lazy"
+                src="/workshop/src/images/AIOps.jpg" style="height:auto;width:auto">
             </a>
-            <a 
-              href="javascript:history.back();"
-              class="lightbox-back" 
-              id=R-image-bbb78003e36cd7db6c726bd5aca1ae05
-            >
-              <img
-                alt="Full Stack" 
-                class="noborder lazy lightbox noshadow lightbox-image" 
-                loading="lazy"
-                src="/workshop/src/images/AIOps.jpg"
-              >
+            <a href="javascript:history.back();" class="lightbox-back" id=R-image-bbb78003e36cd7db6c726bd5aca1ae05>
+              <img alt="Full Stack" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy"
+                src="/workshop/src/images/AIOps.jpg">
             </a>
           </p>
           <footer class=footline>
@@ -102,4 +89,5 @@
   <aside id="R-sidebar" class="default-animation showVisitedLinks">
   </aside>
 </body>
+
 </html>
