--- a/src/ITSI4Rookies/1-service-insights/1-1-skes/index.html
+++ b/src/ITSI4Rookies/1-service-insights/1-1-skes/index.html
@@ -56,7 +56,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            _com.setPage('3');
+            _com.setPage('1-1-1');
         });
     </script>
 
