--- a/src/ITSI4Rookies/1-service-insights/index.html
+++ b/src/ITSI4Rookies/1-service-insights/index.html
@@ -62,7 +62,7 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      _com.setPage('2');
+      _com.setPage('1-1');
     });
   </script>
 
