--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </script>
 </head>
 
-<body class="mobile-support html disableInlineCopyToClipboard" data-url="/src/index.html">
+<body class="mobile-support html disableInlineCopyToClipboard" data-url="index.html">
   <div id="R-body" class="default-animation">
     <div id="R-body-overlay"></div>
     <nav id="R-topbar"></nav>
