--- a/src/advancedConfig/3-index.html
+++ b/src/advancedConfig/3-index.html
@@ -50,11 +50,17 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
                         </md-block>
                     </div>
 
-                    <!--
-                    <footer class=footline><span class="badge cstyle note badge-with-title"><span class=badge-title
-                                class=text-muted>Last Modified
-                            </span><span class=badge-content>Sep 19, 2024</span></span></footer>
-                            -->
+
+                    <footer class=footline>
+                        <span class="badge cstyle note badge-with-title">
+                            <span class="badge-title text-muted">Authors</span>
+                            <span class="badge-content">SooKyung Kim</span>
+                        </span>
+                        <span class="badge cstyle note badge-with-title"><span class=badge-title class=text-muted>Last
+                                Modified
+                            </span><span class=badge-content>Apr 9, 2025</span></span>
+                    </footer>
+
                 </article>
             </div>
         </main>
