--- a/src/advancedConfig/3-2-gateway/3-2-index.html
+++ b/src/advancedConfig/3-2-gateway/3-2-index.html
@@ -10,6 +10,26 @@
             --MAIN-WIDTH-MAX: 130rem;
             --MENU-WIDTH-L: 23rem
         }
+
+        blockquote {
+            background-color: #f0fff4;
+            /* 밝은 초록 배경 */
+            border-left: 6px solid #38a169;
+            /* 진한 초록 테두리 */
+            padding: 1em;
+            border-radius: 6px;
+            margin: 1.5em 0;
+        }
+
+        blockquote p {
+            margin: 0;
+            /* 문단 간 여백 제거 (더 타이트하게) */
+        }
+
+        blockquote strong {
+            color: #2f855a;
+            /* 강조 텍스트 색상 */
+        }
     </style>
     <script src="/o11y-workshop-kr/src/js/includes.js"></script>
     <!-- md-block -->
