--- a/src/advancedConfig/3-3-filelog/3-3-index.html
+++ b/src/advancedConfig/3-3-filelog/3-3-index.html
@@ -52,6 +52,7 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-python.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-json.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-yaml.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-go.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/themes/prism.min.css">
 
 </head>
