edit data-url & menu list

--- a/src/advancedConfig/3-index.html
+++ b/src/advancedConfig/3-index.html
@@ -34,7 +34,7 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
 
 </head>
 
-<body class="mobile-support html disableInlineCopyToClipboard" data-url="ITSI4Rookies/1-service-insights/index.html">
+<body class="mobile-support html disableInlineCopyToClipboard" data-url="advancedConfig/3-index.html">
     <div id="R-body" class="default-animation">
         <div id="R-body-overlay"></div>
         <nav id="R-topbar"></nav>
@@ -70,9 +70,9 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
     </aside>
 
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            _com.setPage('3');
-        });
+      document.addEventListener('DOMContentLoaded', () => {
+        _com.setPage('3');
+      });
     </script>
 
 </body>
