--- a/src/1-ninja-kr/1-index.html
+++ b/src/1-ninja-kr/1-index.html
@@ -53,7 +53,7 @@
 
 </head>
 
-<body class="mobile-support html disableInlineCopyToClipboard" data-url="advancedConfig/3-4-resilience/3-4-index.html">
+<body class="mobile-support html disableInlineCopyToClipboard" data-url="1-ninja-kr/1-index.html">
     <div id="R-body" class="default-animation">
         <div id="R-body-overlay"></div>
         <nav id="R-topbar"></nav>
@@ -63,7 +63,7 @@
                 <article class="default">
                     <header class="headline"></header>
                     <div class="markdown-body">
-                        <md-block src="./3-4-index.md">
+                        <md-block src="./1-index.md">
                             <!-- README.md 로드 실패시 보이는 문구 -->
                             `README.md` was *not* found
                         </md-block>
@@ -90,7 +90,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            _com.setPage('3-4');
+            _com.setPage('1');
         });
     </script>
 
