--- a/src/3-advancedConfig/3-0-requirements/3-0-index.html
+++ b/src/3-advancedConfig/3-0-requirements/3-0-index.html
@@ -57,7 +57,8 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
 
 </head>
 
-<body class="mobile-support html disableInlineCopyToClipboard" data-url="advancedConfig/3-index.html">
+<body class="mobile-support html disableInlineCopyToClipboard"
+    data-url="3-advancedConfig/3-0-requirements/3-0-index.html">
     <div id="R-body" class="default-animation">
         <div id="R-body-overlay"></div>
         <nav id="R-topbar"></nav>
@@ -67,7 +68,7 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
                 <article class="default">
                     <header class="headline"></header>
                     <div class="markdown-body">
-                        <md-block src="./3-index.md">
+                        <md-block src="./3-0-index.md">
                             <!-- README.md 로드 실패시 보이는 문구 -->
                             `README.md` was *not* found
                         </md-block>
@@ -94,7 +95,7 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            _com.setPage('3');
+            _com.setPage('3-0');
         });
     </script>
 
