--- a/src/3-advancedConfig/3-1-agentSetup/3-1-index.html
+++ b/src/3-advancedConfig/3-1-agentSetup/3-1-index.html
@@ -53,7 +53,8 @@
 
 </head>
 
-<body class="mobile-support html disableInlineCopyToClipboard" data-url="advancedConfig/3-8-routing/3-8-index.html">
+<body class="mobile-support html disableInlineCopyToClipboard"
+    data-url="3-advancedConfig/3-1-agentSetup/3-1-index.html">
     <div id="R-body" class="default-animation">
         <div id="R-body-overlay"></div>
         <nav id="R-topbar"></nav>
@@ -63,7 +64,7 @@
                 <article class="default">
                     <header class="headline"></header>
                     <div class="markdown-body">
-                        <md-block src="./3-8-index.md">
+                        <md-block src="./3-1-index.md">
                             <!-- README.md 로드 실패시 보이는 문구 -->
                             `README.md` was *not* found
                         </md-block>
@@ -90,7 +91,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            _com.setPage('3-8');
+            _com.setPage('3-1');
         });
     </script>
 
