--- a/src/3-advancedConfig/3-3-filelog/3-3-index.html
+++ b/src/3-advancedConfig/3-3-filelog/3-3-index.html
@@ -53,8 +53,7 @@
 
 </head>
 
-<body class="mobile-support html disableInlineCopyToClipboard"
-    data-url="advancedConfig/3-5-droppingSpan/3-5-index.html">
+<body class="mobile-support html disableInlineCopyToClipboard" data-url="3-advancedConfig/3-3-filelog/3-3-index.html">
     <div id="R-body" class="default-animation">
         <div id="R-body-overlay"></div>
         <nav id="R-topbar"></nav>
@@ -64,7 +63,7 @@
                 <article class="default">
                     <header class="headline"></header>
                     <div class="markdown-body">
-                        <md-block src="./3-5-index.md">
+                        <md-block src="./3-3-index.md">
                             <!-- README.md 로드 실패시 보이는 문구 -->
                             `README.md` was *not* found
                         </md-block>
@@ -91,7 +90,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            _com.setPage('3-5');
+            _com.setPage('3-3');
         });
     </script>
 
