--- a/src/3-advancedConfig/3-5-droppingSpan/3-5-index.html
+++ b/src/3-advancedConfig/3-5-droppingSpan/3-5-index.html
@@ -41,21 +41,20 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- github-markdown-light 테마 -->
     <!-- prism code theme -->
-    <script src="
-https://cdn.jsdelivr.net/npm/prismjs/prism.min.js
-"></script>
-    <link href="
-https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
-" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-bash.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-javascript.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-python.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-json.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-yaml.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-go.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/themes/prism.min.css">
 
 </head>
 
-<body class="mobile-support html disableInlineCopyToClipboard" data-url="advancedConfig/3-2-gateway/3-2-index.html">
+<body class="mobile-support html disableInlineCopyToClipboard"
+    data-url="3-advancedConfig/3-5-droppingSpan/3-5-index.html">
     <div id="R-body" class="default-animation">
         <div id="R-body-overlay"></div>
         <nav id="R-topbar"></nav>
@@ -65,7 +64,7 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
                 <article class="default">
                     <header class="headline"></header>
                     <div class="markdown-body">
-                        <md-block src="./3-2-index.md">
+                        <md-block src="./3-5-index.md">
                             <!-- README.md 로드 실패시 보이는 문구 -->
                             `README.md` was *not* found
                         </md-block>
@@ -92,7 +91,7 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            _com.setPage('3-2');
+            _com.setPage('3-5');
         });
     </script>
 
