--- a/src/1-ninja-kr/1-1-DeployOpenTelemetryCollector/1-1-index.html
+++ b/src/1-ninja-kr/1-1-DeployOpenTelemetryCollector/1-1-index.html
@@ -54,7 +54,7 @@
 </head>
 
 <body class="mobile-support html disableInlineCopyToClipboard"
-    data-url="1-ninja-kr/1-1-Deploy the OpenTelemetry Collector/1-1-index.html">
+    data-url="1-ninja-kr/1-1-DeployOpenTelemetryCollector/1-1-index.html">
     <div id="R-body" class="default-animation">
         <div id="R-body-overlay"></div>
         <nav id="R-topbar"></nav>
@@ -68,7 +68,7 @@
                             <!-- README.md 로드 실패시 보이는 문구 -->
                             `README.md` was *not* found
                         </md-block>
-                    </div>
+                    </div>-
 
 
                     <footer class=footline>
