--- a/src/1-ninja-kr/1-1-DeployOpenTelemetryCollector/1-1-index.html
+++ b/src/1-ninja-kr/1-1-DeployOpenTelemetryCollector/1-1-index.html
@@ -41,8 +41,12 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- github-markdown-light 테마 -->
     <!-- prism code theme -->
-    <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css" rel="stylesheet">
+    <script src="
+https://cdn.jsdelivr.net/npm/prismjs/prism.min.js
+"></script>
+    <link href="
+https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
+" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-bash.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-javascript.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-python.min.js"></script>
@@ -68,7 +72,7 @@
                             <!-- README.md 로드 실패시 보이는 문구 -->
                             `README.md` was *not* found
                         </md-block>
-                    </div>-
+                    </div>
 
 
                     <footer class=footline>
