--- a/src/1-ninja-kr/1-3-InstrumentJavaAPPwithOpenTelemetry/1-3-index.html
+++ b/src/1-ninja-kr/1-3-InstrumentJavaAPPwithOpenTelemetry/1-3-index.html
@@ -41,12 +41,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- github-markdown-light 테마 -->
     <!-- prism code theme -->
-    <script src="
-https://cdn.jsdelivr.net/npm/prismjs/prism.min.js
-"></script>
-    <link href="
-https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
-" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-bash.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-javascript.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-python.min.js"></script>
@@ -57,7 +53,8 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
 
 </head>
 
-<body class="mobile-support html disableInlineCopyToClipboard" data-url="1-ninja-kr/1-0-requirements/1-0-index.html">
+<body class="mobile-support html disableInlineCopyToClipboard"
+    data-url="1-ninja-kr/1-3-InstrumentJavaAPPwithOpenTelemetry/1-3-index.html">
     <div id="R-body" class="default-animation">
         <div id="R-body-overlay"></div>
         <nav id="R-topbar"></nav>
@@ -67,7 +64,7 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
                 <article class="default">
                     <header class="headline"></header>
                     <div class="markdown-body">
-                        <md-block src="./1-0-index.md">
+                        <md-block src="./1-3-index.md">
                             <!-- README.md 로드 실패시 보이는 문구 -->
                             `README.md` was *not* found
                         </md-block>
@@ -81,7 +78,7 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
                         </span>
                         <span class="badge cstyle note badge-with-title"><span class=badge-title class=text-muted>Last
                                 Modified
-                            </span><span class=badge-content>Apr 30, 2025</span></span>
+                            </span><span class=badge-content>Apr 9, 2025</span></span>
                     </footer>
 
                 </article>
@@ -94,7 +91,7 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            _com.setPage('1-0');
+            _com.setPage('1-3');
         });
     </script>
 
