--- a/src/1-ninja-kr/1-3-InstrumentJavaAPPwithOpenTelemetry/1-3-index.html
+++ b/src/1-ninja-kr/1-3-InstrumentJavaAPPwithOpenTelemetry/1-3-index.html
@@ -64,7 +64,7 @@
                 <article class="default">
                     <header class="headline"></header>
                     <div class="markdown-body">
-                        <md-block src="./1-3-index.md">
+                        <md-block src="../1-3-index.md">
                             <!-- README.md 로드 실패시 보이는 문구 -->
                             `README.md` was *not* found
                         </md-block>
@@ -78,7 +78,7 @@
                         </span>
                         <span class="badge cstyle note badge-with-title"><span class=badge-title class=text-muted>Last
                                 Modified
-                            </span><span class=badge-content>Apr 9, 2025</span></span>
+                            </span><span class=badge-content>Apr 30, 2025</span></span>
                     </footer>
 
                 </article>
