--- a/src/1-ninja-kr/1-4-DockerizeApp/1-4-index.html
+++ b/src/1-ninja-kr/1-4-DockerizeApp/1-4-index.html
@@ -41,8 +41,12 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- github-markdown-light 테마 -->
     <!-- prism code theme -->
-    <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css" rel="stylesheet">
+    <script src="
+https://cdn.jsdelivr.net/npm/prismjs/prism.min.js
+"></script>
+    <link href="
+https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
+" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-bash.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-javascript.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.30.0/components/prism-python.min.js"></script>
@@ -53,8 +57,7 @@
 
 </head>
 
-<body class="mobile-support html disableInlineCopyToClipboard"
-    data-url="1-ninja-kr/1-3-InstrumentJavaAPPwithOpenTelemetry/1-3-index.html">
+<body class="mobile-support html disableInlineCopyToClipboard" data-url="1-ninja-kr/1-4-DockerizeApp/1-4-index.html">
     <div id="R-body" class="default-animation">
         <div id="R-body-overlay"></div>
         <nav id="R-topbar"></nav>
@@ -64,7 +67,7 @@
                 <article class="default">
                     <header class="headline"></header>
                     <div class="markdown-body">
-                        <md-block src="./1-3-index.md">
+                        <md-block src="./1-4-index.md">
                             <!-- README.md 로드 실패시 보이는 문구 -->
                             `README.md` was *not* found
                         </md-block>
@@ -91,7 +94,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            _com.setPage('1-3');
+            _com.setPage('1-4');
         });
     </script>
 
