--- a/src/1-ninja-kr/1-1-DeployOpenTelemetryCollector/1-1-index.html
+++ b/src/1-ninja-kr/1-1-DeployOpenTelemetryCollector/1-1-index.html
@@ -77,7 +77,7 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
 
                     <footer class=footline>
                         <span class="badge cstyle note badge-with-title">
-                            <span class="badge-title text-muted">Authors</span><span class="badge-content">SooKyung
+                            <span class="badge-title text-muted">Authors</span><span class="badge-content">Chaehee Kang
                                 Kim</span>
                         </span>
                         <span class="badge cstyle note badge-with-title"><span class=badge-title class=text-muted>Last
