--- a/src/2-Splunk4NinjasITSI/2-1-service-insights/2-1-index.html
+++ b/src/2-Splunk4NinjasITSI/2-1-service-insights/2-1-index.html
@@ -34,7 +34,8 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
 
 </head>
 
-<body class="mobile-support html disableInlineCopyToClipboard" data-url="ITSI4Rookies/1-service-insights/index.html">
+<body class="mobile-support html disableInlineCopyToClipboard"
+  data-url="2-plunk3NinjasITSI/2-1-service-insights/2-1-index.html">
   <div id="R-body" class="default-animation">
     <div id="R-body-overlay"></div>
     <nav id="R-topbar"></nav>
@@ -44,7 +45,7 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
         <article class="default">
           <header class="headline"></header>
           <div class="markdown-body">
-            <md-block src="./1-service-insights.md">
+            <md-block src="./2-1-index.md">
               <!-- README.md 로드 실패시 보이는 문구 -->
               `README.md` was *not* found
             </md-block>
@@ -62,7 +63,7 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      _com.setPage('1-1');
+      _com.setPage('2-1');
     });
   </script>
 
