--- a/src/2-Splunk4NinjasITSI/2-1-service-insights/2-1-1-Services/2-1-1-index.html
+++ b/src/2-Splunk4NinjasITSI/2-1-service-insights/2-1-1-Services/2-1-1-index.html
@@ -53,7 +53,7 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
 
           <footer class=footline><span class="badge cstyle note badge-with-title"><span class=badge-title
                 class=text-muted>Last Modified
-              </span><span class=badge-content>Sep 19, 2024</span></span></footer>
+              </span><span class=badge-content>Jul 13th, 2025</span></span></footer>
         </article>
       </div>
     </main>
