--- a/src/2-Splunk4NinjasITSI/2-1-service-insights/2-1-5-Entities/2-1-5-index.html
+++ b/src/2-Splunk4NinjasITSI/2-1-service-insights/2-1-5-Entities/2-1-5-index.html
@@ -35,7 +35,7 @@ https://cdn.jsdelivr.net/npm/prismjs/themes/prism.min.css
 </head>
 
 <body class="mobile-support html disableInlineCopyToClipboard"
-  data-url="2-plunk3NinjasITSI/2-1-service-insights/2-1-5. Entities/2-1-5-index.html">
+  data-url="2-plunk3NinjasITSI/2-1-service-insights/2-1-5-Entities/2-1-5-index.html">
   <div id="R-body" class="default-animation">
     <div id="R-body-overlay"></div>
     <nav id="R-topbar"></nav>
